# ChangeLog for app-office/mozilla-sunbird-bin
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/mozilla-sunbird-bin/ChangeLog,v 1.12 2006/08/14 19:02:39 mr_bones_ Exp $

  14 Aug 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -mozilla-sunbird-bin-0.2.ebuild:
  clean out old ebuild

  13 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
  mozilla-sunbird-bin-0.2.20050724.ebuild:
  Add modular X dependencies. Found with: find /opt/sunbird/ -perm /g+x |
  xargs file | egrep 'LSB (exe|sha)' | cut -d: -f1 | xargs ldd | cut -d'(' -f1
  | sort | uniq | grep lib[SIX].

  11 Aug 2005; Diego Pettenò <flameeyes@gentoo.org>
  mozilla-sunbird-bin-0.2.ebuild, mozilla-sunbird-bin-0.2.20050724.ebuild:
  Call has_multilib_profile from pkg_setup instead of global scope.

*mozilla-sunbird-bin-0.2.20050724 (27 Jul 2005)

  27 Jul 2005; Aron Griffis <agriffis@gentoo.org>
  +files/app-chrome.manifest-0.2.20050724,
  +mozilla-sunbird-bin-0.2.20050724.ebuild:
  Update to 20050724 nightly snapshot

  25 Jul 2005; Aron Griffis <agriffis@gentoo.org>
  mozilla-sunbird-bin-0.2.ebuild:
  Require mozilla-launcher-1.44 which has the -calendar hack

*mozilla-sunbird-bin-0.2 (25 Jul 2005)

  25 Jul 2005; Aron Griffis <agriffis@gentoo.org>
  +mozilla-sunbird-bin-0.2.ebuild, -mozilla-sunbird-bin-0.2.20040812.ebuild,
  -mozilla-sunbird-bin-0.2.20041112.ebuild:
  Bump to 0.2 release, which doesn't work any better for me than the previous
  stuff, but hey maybe this pmasked package will work for somebody #75167
  #78374 #80902 #80829

  23 Mar 2005; Seemant Kulleen <seemant@gentoo.org>
  mozilla-sunbird-bin-0.2.20040812.ebuild,
  mozilla-sunbird-bin-0.2.20041112.ebuild:
  mozilla-launcher to www-client from net-www

  14 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org>
  mozilla-sunbird-bin-0.2.20040812.ebuild,
  mozilla-sunbird-bin-0.2.20041112.ebuild:
  back to amd64 from of emul-linux-x86
