@@ -11,14 +11,19 @@ MD5 4496a3c35ce5936332ac41702c3e32f7 files/icon/mozillasunbird-bin.desktop 199
 RMD160 72d3eacc8f2af9b4e9db6b33e4eff16d75be8812 files/icon/mozillasunbird-bin.desktop 199
 SHA256 5f50cce74d89e8e85a71dc87f09f807eb0f43fb50450288748c0eb46b65bb880 files/icon/mozillasunbird-bin.desktop 199
 DIST sunbird-0.2.20050724.en-US.linux-i686.tar.gz 6980792
+DIST sunbird-0.3a2.en-US.linux-i686.tar.bz2 6943637 RMD160 e27b1a472440f3e01dfc99f6b6cb0ae8d7ea480d SHA1 511ebd939de695082d68ba39d9bfee56e6e1ebc4 SHA256 6bbfff449775c6312f0c09ccdb7b793803a03ca6630f66ef3672ae68b954f6e3
 EBUILD mozilla-sunbird-bin-0.2.20050724.ebuild 2163 RMD160 caf4d8fc9f755a697ac97a24b248497c80ce4a10 SHA1 1345b11134ac5636a237b04e64c41a44bebbf703 SHA256 bf1c3b84197a0cd82059d0842d4306e7dd30eb99e10fdceb6848bc2c791947f6
 MD5 18f910068468fe7bb2221fb52cfcf7e2 mozilla-sunbird-bin-0.2.20050724.ebuild 2163
 RMD160 caf4d8fc9f755a697ac97a24b248497c80ce4a10 mozilla-sunbird-bin-0.2.20050724.ebuild 2163
 SHA256 bf1c3b84197a0cd82059d0842d4306e7dd30eb99e10fdceb6848bc2c791947f6 mozilla-sunbird-bin-0.2.20050724.ebuild 2163
-MISC ChangeLog 2637 RMD160 cedd101ea982136054320f663b5b88d9d96d566c SHA1 c5b4696df80ebb3971da13fcb5b869aea9228d8f SHA256 bd9dbd591e7bd5a7cdc749324fe3ce4cd21c2ed7300533d147f2615e4562eca2
-MD5 d515518590e9e216f7ec26fa1558eb61 ChangeLog 2637
-RMD160 cedd101ea982136054320f663b5b88d9d96d566c ChangeLog 2637
-SHA256 bd9dbd591e7bd5a7cdc749324fe3ce4cd21c2ed7300533d147f2615e4562eca2 ChangeLog 2637
+EBUILD mozilla-sunbird-bin-0.3_alpha2.ebuild 2195 RMD160 112eb01df303f127094152decbb8c10c9d8b3fa5 SHA1 a83ef60c554767b172492bb6d6b354410e5df5e9 SHA256 d1ed13ab5ff34cde839cc2b6168e952a0c02f504b96a78275dab767853d31c0c
+MD5 a18f3b2f95031c3ebbd4955414bae20e mozilla-sunbird-bin-0.3_alpha2.ebuild 2195
+RMD160 112eb01df303f127094152decbb8c10c9d8b3fa5 mozilla-sunbird-bin-0.3_alpha2.ebuild 2195
+SHA256 d1ed13ab5ff34cde839cc2b6168e952a0c02f504b96a78275dab767853d31c0c mozilla-sunbird-bin-0.3_alpha2.ebuild 2195
+MISC ChangeLog 2872 RMD160 ceb389553f149c5c767c3b31552c1f7d937adff1 SHA1 6357b188b4ce1269bbb17d7ecd89613e67bf2f0e SHA256 af9b1835932616b3950b2753b6bf1a9b140696aa773b414d753e962bfda25f8e
+MD5 b51d58777f1f417917810935508bd1af ChangeLog 2872
+RMD160 ceb389553f149c5c767c3b31552c1f7d937adff1 ChangeLog 2872
+SHA256 af9b1835932616b3950b2753b6bf1a9b140696aa773b414d753e962bfda25f8e ChangeLog 2872
 MISC metadata.xml 160 RMD160 d5a9f0bf8989621c2bde30facb53bcae00aba709 SHA1 5015c07af2083f20f9552d7fb11afb5ea69af345 SHA256 0cc5126362a12cee42ec1197c528a804cf36859329dd2c6d9225726831d14b8b
 MD5 ce23390351fe8020387d93ee29e09a3d metadata.xml 160
 RMD160 d5a9f0bf8989621c2bde30facb53bcae00aba709 metadata.xml 160
@@ -26,3 +31,6 @@ SHA256 0cc5126362a12cee42ec1197c528a804cf36859329dd2c6d9225726831d14b8b metadata
 MD5 5a39653cb1d47b96143a679acb9dfd7f files/digest-mozilla-sunbird-bin-0.2.20050724 90
 RMD160 d1c85eff535f3cc9b84a33929eee3f6791f8a34a files/digest-mozilla-sunbird-bin-0.2.20050724 90
 SHA256 57d19d2c800b5fed8da25138511bcae91a0be4b268d390e81f725c7524552d79 files/digest-mozilla-sunbird-bin-0.2.20050724 90
+MD5 dafb1e2a276e6873d9b1c5d94d5044b4 files/digest-mozilla-sunbird-bin-0.3_alpha2 298
+RMD160 17b381305dbf23dd4f56123133957a6def97c100 files/digest-mozilla-sunbird-bin-0.3_alpha2 298
+SHA256 e606b164a745d364e2b64c048ee7f0c5d82d6005828b4dfe104262202a2d5324 files/digest-mozilla-sunbird-bin-0.3_alpha2 298
