@@ -1,0 +1,3 @@
+MD5 59af4313b245737425ebea5476ea2452 sunbird-0.3a2.en-US.linux-i686.tar.bz2 6943637
+RMD160 e27b1a472440f3e01dfc99f6b6cb0ae8d7ea480d sunbird-0.3a2.en-US.linux-i686.tar.bz2 6943637
+SHA256 6bbfff449775c6312f0c09ccdb7b793803a03ca6630f66ef3672ae68b954f6e3 sunbird-0.3a2.en-US.linux-i686.tar.bz2 6943637
